--- a/server/views/index.html
+++ b/server/views/index.html
@@ -2,20 +2,20 @@
 <html>
 <head>
 	<title>CRUD Ness</title>
-	<link href="main.css" rel="stylesheet" type="text/css">
+	<link href="../public/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<meta charset="utf-8" />
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0" />
-    <script src="popUp.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-    <script src="./jquery.js"></script>
-    <script src="index.js"></script>
+    <script src="../public/jquery.js"></script>
+    <script src="../public/popUp.js" defer></script>
+    <script src="../public/index.js"></script>
 </head>
 <body>
     <header>
-        <img src="./images/logo.png" alt="">
+        <img src="../public/images/logo.png" alt="">
         <h1 class="titulo">Gerenciamento de jogadores</h1>
     </header>
     <main>
@@ -47,7 +47,6 @@
                 </form>
                 <footer class="pop-footer">
                     <button class="button red" id="save-form">Salvar</button>
-                    <button class="button black">Cancelar</button>
                 </footer>
             </div>
         </div>
@@ -66,7 +65,6 @@
                 </form>
                 <footer class="pop-footer edit">
                     <button class="button red" id="editar-form">Editar</button>
-                    <button class="button black">Cancelar</button>
                 </footer>
             </div>
         </div>
@@ -74,7 +72,7 @@
         <div class="pop delete" id="pop3">
             <div class="pop-content delete">
                 <header class="pop-header delete">
-                    <h2>Editar jogador</h2>
+                    <h2>Excluir jogador</h2>
                     <span class="pop-close delete" id="pop-close3">&#10006;</span>
                 </header>
                 <form class="pop-form delete" id="form3">
@@ -82,7 +80,6 @@
                 </form>
                 <footer class="pop-footer delete">
                     <button class="button red" id="delete-form">Confirmar</button>
-                    <button class="button black">Cancelar</button>
                 </footer>
             </div>
         </div>
